Create a fuction for autoscroll if it exceeds the minimum hight.

--- a/templates/room.html
+++ b/templates/room.html
@@ -51,9 +51,14 @@
         }
     }
     
+    function scrollToBottom(){
+        document.querySelector('#messagescontainer').scrollTo({top:document.querySelector('#messagescontainer').scrollHeight, behaviour : 'smooth'});
+    }
+    
     chatSocket.onmessage = function(e){
         const data = JSON.parse(e.data);
         document.querySelector('#messagescontainer').innerHTML += '<div id="lefttext">'+data.message+'</div>'+'<br><br>';
+        scrollToBottom();
     }
     
 </script>
