--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Test</title>
+    <title>Home</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style type="text/css">
         input{
@@ -12,17 +13,17 @@
         }
     </style>
 </head>
-<body>
-    <div style="height: 100vh" class="d-flex justify-content-center align-items-center">
-    <form method="post" action="{% url 'room' %}">
-        {% csrf_token %}
-        <input placeholder="Enter Room no" class="form-control" type="text" name="room_no">
-        
-        <input placeholder="Enter Name" class="form-control" type="text" name="name" class="">
-        <div class="d-flex justify-content-center">
-            <input class='btn btn-primary' type="submit" value="Enter Room">
-        </div>
-    </form>
-</div>
+<body class="">
+    <div style="height: 100vh" class="d-flex justify-content-center align-items-center bg-stone-700">
+        <form method="post" action="{% url 'room' %}">
+            {% csrf_token %}
+            <input placeholder="Enter Room no" class="form-control rounded-lg mb-2" type="text" name="room_no" required>
+            
+            <input placeholder="Enter Name" class="form-control rounded-lg mb-2" type="text" name="name" class="" required>
+            <div class="d-flex justify-content-center">
+                <input class='btn btn-primary' type="submit" value="Enter Room">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
