--- a/templates/room.html
+++ b/templates/room.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room Test</title>
+    <title>Chat Room</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <style type="text/css">
         #lefttext{
             position: absolute;
@@ -14,13 +15,13 @@
             padding-right: 6px;
             border-radius: 5px;
             color: white;
-            background-color : #0079E5;
+            background-color : gray;
         }
     </style>
 </head>
-<body>
-    <div style='position:relative;height:100vh; width:100vw;' class="d-flex justify-content-center align-items-center">
-        <h1 style="top:0;position:absolute;">Welcome to the room <span style="color: #0079E5;"> {{room_no}} </span></h1>
+<body class="flex justify-center bg-stone-700">
+    <div style='position:relative;height:100vh; width:50vw;' class="d-flex justify-content-center align-items-center bg-stone-100 rounded-lg">
+        <h1 class=" text-stone-800 text-[40px] font-bold" style="top:0;position:absolute;">Welcome to the room <span style="color: #0079E5;"> {{room_no}} </span></h1>
         <div id="messagescontainer" style="overflow-y:auto; width: 40vw; height:80vh;position: relative;" class="container">
             {% for message in messages %}
             <div id='lefttext'>{{message}}</div>
@@ -28,8 +29,8 @@
             {% endfor %}
         </div>
         <div style="position:absolute; width:100vh; bottom:20px" class="d-flex justify-content-center">
-            <input id="messageinputfield" class="form-control" style="text-align:center;width:40vh;" type="text" name="">
-            <input id="sendbutton" class="btn btn-primary" value="send" type="submit" name="">
+            <input id="messageinputfield" class="form-control bg-stone-200 border border-stone-900 rounded-lg" style="text-align:center;width:40vh;" type="text" name="" placeholder="Type " required>
+            <input id="sendbutton" class="btn btn-primary" value="send" type="submit" name="" >
         </div>
     </div>
     
